--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "nodemon": "^2.0.15",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.30.0",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "ts-loader": "^9.2.9",
     "typescript": "^4.6.3",
